projects/examples/source/02.38.cpp
/////////////////////////////////////////////////////////////

// chapter : Language Core Basics

/////////////////////////////////////////////////////////////

// content : Function Overloading
//
// content : Name Mangling

/////////////////////////////////////////////////////////////

#include <print>

/////////////////////////////////////////////////////////////

void test(int              ) { std::print("test (1)\n"); }

void test(int, int         ) { std::print("test (2)\n"); }

void test(int, int, int = 0) { std::print("test (3)\n"); }

/////////////////////////////////////////////////////////////

int main()
{
    test(1      ); // support : https://compiler-explorer.com

//  test(1, 2   ); // error

    test(1, 2, 3); // support : https://compiler-explorer.com
}

/////////////////////////////////////////////////////////////